@@ -30,6 +30,8 @@ Fixed
 - Navigating via hints to a remote URL from a file:// one works again. (#7847)
 - The timers related to the tab audible indicator and the auto follow timeout
   no longer accumulate connections over time. (#7888)
+- The workaround for crashes when using drag & drop on Wayland with Qt 6.5.2 now also
+  works correctly when using `wayland-egl` rather than `wayland` as Qt platform.
 - Upgraded the bundled Qt version to 6.5.3. Note this is only relevant for the
   macOS/Windows releases, on Linux those will be upgraded via your distribution
   packages. This Qt patch release comes with
